@@ -9,6 +9,7 @@
 
         <property name="imageslider_teaser_navigation" type="boolean">False</property>
         <property name="imageslider_teaser_caption" type="boolean">False</property>
+        <property name="imageslider_teaser_link_related" type="boolean">False</property>
         <property name="imageslider_teaser_fadetime" type="int">1500</property>
         <property name="imageslider_teaser_halttime" type="int">6000</property>
         <property name="imageslider_teaser_height" type="int">200</property>
